fix the overflow again should be overflow-x hidden for body and html

--- a/css/general.css
+++ b/css/general.css
@@ -68,7 +68,7 @@ html {
   /* 10px / 16px = 0.625 = 62.5% */
   /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
@@ -76,9 +76,7 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
-
-  /* to avoid the mobile nav, move outside the body */
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 /**************************/
